--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ header {
 }
 .courses {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 .courses_menu {
   list-style-type: style;
@@ -138,4 +139,7 @@ header {
 .courses_menu_item_link:hover {
   color: #339933;
   text-decoration: none;
+}
+.education {
+  margin: 30px 0;
 }
