--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h1 {
   font-size: 1.7em;
   margin-bottom: 10px;
 }
+h2 {
+  font-size: 1.3em;
+  margin-bottom: 10px;
+}
 .container {
   max-width: 1000px;
   margin: 0 auto;
