--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ header {
   max-width: 100%;
 }
 .code_example {
-  background-color: #798a79;
+  background-color: #151d15;
   padding: 20px 10px;
 }
 .code_example p {
